# ml-zoom-camp

./: .gitignore  pyproject.toml
week_one/: download_data.sh  week_one.py
week_two/: week_two.py
