[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-zoom-camp"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
]

[project.optional-dependencies]
dev = []